--- a/packages/gatsby-site-theme/package.json
+++ b/packages/gatsby-site-theme/package.json
@@ -20,7 +20,6 @@
     "dotenv": "^8.2.0",
     "email-validator": "^1.2.3",
     "fuse.js": "^3.6.1",
-    "gatsby": "^2.21.11",
     "gatsby-alias-imports": "^1.0.4",
     "gatsby-core-utils": "^1.2.0",
     "gatsby-design-tokens": "^2.0.5",
@@ -84,9 +83,7 @@
     "qs": "^6.9.4",
     "query-string": "^6.12.1",
     "range": "^0.0.3",
-    "react": "^16.13.0",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^16.13.0",
     "react-helmet": "^6.0.0",
     "react-highcharts": "^16.1.0",
     "react-icons": "^3.10.0",
@@ -150,6 +147,9 @@
     "lingui:build": "yarn lingui:extract && yarn lingui:compile"
   },
   "devDependencies": {
+    "gatsby": "^2.21.11",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "@lingui/cli": "^2.9.1",
     "@lingui/macro": "^2.9.1",
     "@testing-library/jest-dom": "^5.5.0",
@@ -168,5 +168,10 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "webshot": "^0.18.0"
+  },
+  "peerDependencies": {
+    "gatsby": "^2.21.11",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
